# maestro

./: .dockerignore  .env.example  .env.production.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  nginx.conf  nginx.docker.conf
.github/workflows/: docs.yml  release.yml
backend/: .dockerignore  .env.example  README.md  pyproject.toml
backend/maestro/: __init__.py  app.py  auth.py  cli.py  models.py
backend/maestro/agent/: cli_runner.py  deployment.py  dispatcher.py  implementation.py  monitor.py  plugin.py  review.py  risk_profile.py  runner.py  sdk_runner.py  tools.py  worker.py
backend/maestro/agents/: cli_runner.py  monitor.py  plugin.py  prompt.py
backend/maestro/api/: agent_runs.py  agents.py  auth.py  routes.py  tasks.py  workspaces.py
backend/maestro/config/: loader.py  schema.py
backend/maestro/db/: crud.py  engine.py  models.py
backend/maestro/orchestrator/: engine.py
backend/maestro/tracker/: base.py  github.py  linear.py
backend/maestro/worker/: dispatcher.py  worker.py
backend/tests/: test_agent.py  test_tracker.py
cli/: go.mod
docs/: docusaurus.config.ts  package-lock.json  package.json
docs/docs/: agents.md  configuration.md  contributing.md  getting-started.md  integrations.md  pipeline.md  pipeline.mdx  (+1 more)
engine/: Dockerfile  README.md  WORKFLOW.md  pyproject.toml
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
ui/: package-lock.json  package.json
web/: docusaurus.config.ts  package-lock.json
(+148 files in other folders)
